2008-02-15  Darin Adler  <darin@apple.com>

        - another Qt build fix

        * platform/qt/ClipboardQt.cpp:
        (WebCore::ClipboardQt::declareAndWriteDragImage): Use KURL instead of String.

2008-02-14  Darin Adler  <darin@apple.com>

        - another round of build fixes

        * platform/KURL.cpp:
        (WebCore::appendEncodedHostname): Fix spelling (strLen, not strlen).
        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::parseDataUrl): Fix a ".." typo and call data instead of characters.

2008-02-14  Darin Adler  <darin@apple.com>

        - added back accidentally-removed files

        * platform/DeprecatedStringList.cpp: Copied from platform/DeprecatedStringList.cpp.
        * platform/DeprecatedStringList.h: Copied from platform/DeprecatedStringList.h.
        * platform/mac/DeprecatedStringListMac.mm: Copied from platform/mac/DeprecatedStringListMac.mm.

2008-02-14  Darin Adler  <darin@apple.com>

        - more build fixes

        * platform/KURL.cpp:
        (WebCore::appendEncodedHostname): Use String to make a QString.
        * platform/network/cf/ResourceRequest.h:
        (WebCore::ResourceRequest::ResourceRequest): Removed a stray deprecatedString() call.
        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::parseDataUrl): Updated to String rather than DeprecatedString functions.

2008-02-14  Darin Adler  <darin@apple.com>

        - next Qt build fix

        * platform/network/qt/ResourceRequest.h:
        (WebCore::ResourceRequest::ResourceRequest): Removed a stray deprecatedString() call.

2008-02-14  Darin Adler  <darin@apple.com>

        - another build fix

        * platform/network/curl/ResourceRequest.h:
        (WebCore::ResourceRequest::ResourceRequest): Removed a stray deprecatedString() call.

2008-02-14  Darin Adler  <darin@apple.com>

        - first Qt build fix

        * dom/XMLTokenizer.cpp: